--- a/client/src/styles/_partials/_account.scss
+++ b/client/src/styles/_partials/_account.scss
@@ -1,7 +1,6 @@
 .account {
   margin: 1rem 1rem;
-  padding: 1rem 1rem;
-  padding-bottom: 1.5rem;
+  padding: 1rem 1rem 1.5rem 1rem;
   border: 1px solid silver;
   width: 100%;
   max-width: 60rem;
@@ -9,7 +8,7 @@
   &__wrapper {
     display: flex;
     justify-content: center;
-    width: 100%;
+    flex: 1;
   }
 
   &__holder {
