landing account wrap style

--- a/client/src/styles/_partials/_landing.scss
+++ b/client/src/styles/_partials/_landing.scss
@@ -73,6 +73,7 @@
     justify-content: center;
     padding: 5rem 20rem;
     &__content {
+      height: 50%;
       padding-bottom: 0;
     }
     &__btnWrap {
