--- a/client/src/styles/_partials/_account.scss
+++ b/client/src/styles/_partials/_account.scss
@@ -3,6 +3,7 @@
   padding: 1rem 1rem 1.5rem 1rem;
   border: 1px solid silver;
   width: 100%;
+  height: 100%;
   max-width: 60rem;
 
   &__wrapper {
